# livecoding

./: README.md  install.txt
bomgen/: .vimrc  README.md  bomgen.cabal  run.sh
bomgen/src/: Main.hs
bomgen/src/BomGen/: Config.hs  ConfigLoader.hs  DataLoader.hs  Foo.hs  Loader.hs
bomgen/src/BomGen/Csv/: Item.hs  Part.hs  SytelineItem.hs  SytelineMaterial.hs  SytelineOperation.hs
bomgen/src/BomGen/Data/: AppData.hs  Bom.hs  Config.hs  Item.hs  ItemHeader.hs  Part.hs  ProductDescription.hs  SyteLine.hs
bomgen/src/BomGen/Map/: Bom.hs  Item.hs  PartMap.hs
bomgen/src/BomGen/Pretty/: Bom.hs  Item.hs  Syteline.hs
bomgen/src/BomGen/Render/: Export.hs  Summary.hs  Tree.hs
concatenate/: concatenate.cabal
concatenate/app/: Main.hs
exercises/: .vimrc
exercises/app/: Main.hs
fold-sample/src/: Main.hs
hello/: .vimrc  Dockerfile  build.sh  hello.cabal  stack.yaml
hello-aeson/: .vimrc  Dockerfile  README.md  hello-aeson.cabal  sample.json  sample2.json  stack.yaml
hello-aeson/app/: Main.hs
hello-aeson/src/: HelloAeson.hs
hello-aeson/test/: Spec.hs
hello-array/: .vimrc  hello-array.cabal
hello-array/app/: Main.hs
hello-bom/: hello-bom.cabal
hello-bomtree/: hello-bomtree.cabal
hello-bomtree/src/: Main.hs
hello-criterion/src/: HelloCriterion.hs
hello-csv/: .vimrc  sample.csv
hello-csv/app/: Main.hs
hello-debian/: .vimrc  README.md  hello-debian.cabal  mkdeb
hello-errors/: .vimrc  README.md  hello-errors.cabal
hello-errors/app/: Main.hs
hello-errors/src/: HelloErrors.hs
hello-exceptions/: .vimrc  hello-exceptions.cabal
hello-exceptions/app/: Main.hs
hello-exceptions/test/: Spec.hs
hello-lens/: .vimrc  hello-lens.cabal
hello-lens/app/: Main.hs
hello-lens/src/: HelloLens.hs
hello-lens/test/: Spec.hs
hello-mapm/: .vimrc  hello-mapm.cabal
hello-mapm/src/: HelloMapm.hs
hello-maybe-t/: Dockerfile  hello-maybe-t.cabal
hello-monad-transformer/: .vimrc
hello-monad-transformer/app/: Main.hs
hello-monad-transformer/test/: Spec.hs
hello-my-list/: .vimrc  hello-my-list.cabal
hello-my-list/test/: Spec.hs
hello-option-parsing/: .vimrc  README.md
hello-option-parsing/app/: Main.hs
hello-option-parsing/src/: HelloOptionParsing.hs
hello-option-parsing/test/: Spec.hs
hello-parsec/: .vimrc  README.md  hello-parsec.cabal
hello-parsec/app/: Main.hs
hello-parsec/src/: Foo.hs  Main.hs
hello-parsec/test/: Spec.hs
hello-prompt/: README.md  hello-prompt.cabal
hello-prompt/app/: Main.hs
hello-reader-monad/: .vimrc  hello-reader-monad.cabal
hello-reader-monad/src/: HelloReaderMonad.hs
hello-regex/: .vimrc  hello-regex.cabal
hello-regex/test/: Spec.hs
hello-state-lyah/: .vimrc
hello-state-lyah/app/: Main.hs
hello-state-lyah/src/: HelloStateLyah.hs
hello-state-lyah/test/: Spec.hs
hello-state-rwh/: .vimrc
hello-state-rwh/app/: Main.hs
hello-state-rwh/src/: HelloStateRwh.hs
hello-text/: .vimrc  hello-text.cabal
hello-text/app/: Main.hs
hello-threadscope/: .vimrc
hello-threadscope/app/: Main.hs
hello-time/: .vimrc  hello-time.cabal
hello-time/src/: HelloTime.hs
hello-uom/: .gitignore  hello-uom.cabal
hello-uom/src/: Main.hs
hello-world/: .dockerignore  .stack.alpine  .stack.debian  .vimrc  Dockerfile.alpine  Dockerfile.debian  build.alpine.sh  build.debian.sh  hello-world.cabal  run.alpine.sh  run.debian.sh
hello-world/src/: Main.hs
hello-writer-monad/app/: Main.hs
hello-writer-monad/src/: HelloWriterMonad.hs
hello-writer-monad/test/: Spec.hs
hello/app/: Main.hs
hello/src/: Hello.hs
hello/test/: Spec.hs
install-haskell/: DEBIAN.MD  README.md
install-haskell/guides/: DEBIAN.md
install-haskell/testing/: README.md
iostuff/: dstfile.csv  iostuff.cabal  srcfile.xlsx
monad-fun/: .vimrc  monad-fun.cabal
monad-fun/app/: Main.hs
pizza_cutter/: .vimrc  README  pizza-cutter.cabal
pizza_cutter/src/: Main.hs.bak
program-structure/: bingo.txt
program-structure/app/: Main.hs
retired/bomgen/: README.md
retired/concatenate/: .vimrc
retired/fold-sample/: .vimrc  fold-sample.cabal
retired/fold-sample/test/: Test.hs
retired/hello-aeson/: .gitignore  hello-aeson.cabal
retired/hello-array/: .gitignore
retired/hello-bom/: .vimrc
retired/hello-bomtree/: .vimrc
retired/hello-criterion/: .vimrc  foo.html  hello-criterion.cabal
retired/hello-criterion/test/: Spec.hs
retired/hello-csv2/: .vimrc  hello-csv.cabal
retired/hello-errors/: hello-errors.cabal
retired/hello-exceptions/: README.md
retired/hello-maybe-t/: .vimrc
retired/hello-monad-transformer/: hello-monad-transformer.cabal  stack.yaml
retired/hello-monad-transformer/app/: Main.hs
retired/hello-parsec/: .vimrc
retired/hello-prettyprint/: .vimrc
retired/hello-regex/: .gitignore
retired/hello-state-lyah/: hello-state-lyah.cabal
retired/hello-state-rwh/: hello-state-rwh.cabal
retired/hello-text/: hello-text.cabal
retired/hello-threadscope/: hello-threadscope-app.eventlog  hello-threadscope.cabal
retired/hello-writer-monad/: .vimrc  hello-writer-monad.cabal
retired/iostuff/: .vimrc
retired/monad-fun/: monad-fun.cabal
retired/monad-fun/src/: MonadFun.hs
retired/monad-fun/test/: Spec.hs
retired/smp-fib/: smp-fib.cabal
retired/smp-fib/app/: Main.hs
rogue-like/: .vimrc  rogue-like.cabal  stack.yaml
rogue-like/app/: Main.hs
rogue-like/src/: RogueLike.hs
rogue-like/test/: Spec.hs
run-foo/: run-foo.cabal
run-foo/app/: Main.hs
run-foo/test/: Spec.hs
serial-number-parser/: serial-number-parser.cabal
serial-number-parser/app/: Main.hs
serial-number-parser/src/: SerialNumberParser.hs
serial-number-parser/test/: Spec.hs
simple-balance/: .vimrc  simple-balance.cabal
simple-balance/src/: Other.hs
simple-reader/: .vimrc  simple-reader.cabal
simple-state/: simple-state.cabal
smp-fib/: .vimrc
transformer-fun/: 3a  transformer-fun.cabal
transformer-fun/app/: Main.hs
transformer-fun/src/: TransformerFun.hs
transformer-sample/: .vimrc  transformer-sample.cabal
unmaintained/program-structure/: .vimrc  foo.rb  program-structure.cabal
(+105 files in other folders)
