name:                  hello-parsec
version:               0.0.1
homepage:              https://github.com/mgreenly
license:               ISC
license-file:          LICENSE
author:                Michael Greenly
maintainer:            mgreenly@gmail.com
build-type:            Simple
cabal-version:         >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     HelloParsec
  ghc-options:         -O2
                       -threaded
                       "-with-rtsopts=-N"
  build-depends:       base                    >= 4.8


executable hello-parsec-app
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2
                       -threaded
                       "-with-rtsopts=-N"
  build-depends:       base                    >= 4.8
                       , hello-parsec
                       , parsec

test-suite hello-parsec-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                       , hello-parsec
                       , hspec
                       , QuickCheck

source-repository head
  type:               git
  location:           https://github.com/mgreenly/hello-parsec
