name:                  run-foo
version:               0.0.1
homepage:              https://github.com/mgreenly
license:               ISC
license-file:          LICENSE
author:                Michael Greenly
maintainer:            mgreenly@gmail.com
build-type:            Simple
cabal-version:         >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     RunFoo
  ghc-options:         -O2
                       -threaded
                       "-with-rtsopts=-N"
  build-depends:       base                    >= 4.8


executable run-foo-app
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2
                       -threaded
                       "-with-rtsopts=-N"
  build-depends:       base                    >= 4.8
                       , run-foo

test-suite run-foo-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                       , run-foo
                       , hspec
                       , QuickCheck

source-repository head
  type:               git
  location:           https://github.com/mgreenly/run-foo
