name:                  fold-sample
version:               0.0.1
synopsis:              Auto generated synopsis for fold-sample package
homepage:              https://github.com/mgreenly
license:               ISC
license-file:          LICENSE
author:                Michael Greenly
maintainer:            mgreenly@gmail.com
build-type:            Simple
cabal-version:         >=1.10

source-repository head
  type:               git
  location:           https://github.com/mgreenly/fold-sample

executable             fold-sample
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       , OverloadedStrings
                       , TupleSections
                       , BangPatterns
                       , NamedFieldPuns
                       , RecordWildCards
                       , GeneralizedNewtypeDeriving
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Foo
  ghc-options:         -O2
                       -threaded
                       -with-rtsopts=-N
  build-depends:       base                    >= 4.8
                       , containers

test-suite fold-sample-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
                       , src
  main-is:             Test.hs
  build-depends:       base
                       , hspec
                       , QuickCheck
